# quantizedensenet

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/quantizedensenet/: converter.py  utils.py
tests/: test.py
