[tool.poetry]
name = "quantizedensenet"
version = "0.0.1"
description = "A simple package for converting TensorFlow DenseNet121 and DenseNet201 models to ONNX and TensorRT formats."
authors = ["Gergő Lovas <lovasgergo44@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["tensorflow", "onnx", "tensorrt", "model-conversion"]
repository = "https://github.com/Geridev/quantizedensenet"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
tensorflow = "*"
tf2onnx = "*"
onnx = "*"
onnxconverter-common = "*"
tensorrt = "*"
numpy = "*"
pillow = "*"
cuda-python = "*"
protobuf = "~3.20.3"

[tool.poetry.group.test.dependencies]
pytest = [
    {version = "^8.3", python = ">=3.8,<3.10"},
    {version = "^9.0", python = ">=3.10"}
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "quantizedensenet"
version = "0.0.1"
description = "A simple package for converting TensorFlow DenseNet121 and DenseNet201 models to ONNX and TensorRT formats."
authors = [
    { name="Gergő Lovas", email="lovasgergo44@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["tensorflow", "onnx", "tensorrt", "model-conversion"]

[project.urls]
Repository = "https://github.com/Geridev/quantizedensenet"