[tool.poetry]
name = "quantizedensenet"
version = "0.0.6"
description = "Package for converting TensorFlow DenseNet121 and DenseNet201 models to ONNX and TensorRT formats."
authors = ["Gergő Lovas <lovasgergo44@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["tensorflow", "onnx", "tensorrt", "model-conversion"]
repository = "https://github.com/Geridev/quantizedensenet"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
cuda_bindings = "12.9.2"
cuda_pathfinder = "1.2.3"
numpy = "1.26.4"
onnx = "1.17.0"
onnxconverter_common = "1.16.0"
Pillow = "12.0.0"
tensorflow = "2.18.0"
tensorrt_cu12 = "10.14.1.48.post1"
tf2onnx = "1.16.1"

[tool.poetry.group.test.dependencies]
pytest = [
    {version = "^8.3", python = ">=3.8,<3.10"},
    {version = "^9.0", python = ">=3.10"}
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "quantizedensenet"
version = "0.0.6"
description = "Package for converting TensorFlow DenseNet121 and DenseNet201 models to ONNX and TensorRT formats."
authors = [
    { name="Gergő Lovas", email="lovasgergo44@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["tensorflow", "onnx", "tensorrt", "model-conversion"]

[project.urls]
Repository = "https://github.com/Geridev/quantizedensenet"